<resources>
    <string name="app_name">S-MART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_cart_message">Are you sure you want to remove all items from the cart ?</string>
    <string name="lets_sign_you_in">Let\'s Sign You In</string>
    <string name="welcome_back">Welcome back you\'ve been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="field_cannot_be_empty">Field cannot be empty!</string>
    <string name="you_must_enter_a_valid_email">You must enter a valid email!</string>
    <string name="minimum_password_chars">Minimum of 6 characters are required!</string>
    <string name="incorrect_email">Incorrect Email!</string>
    <string name="incorrect_password">Incorrect Password!</string>
    <string name="logout">Logout</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="getting_started">Getting Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="display_name">Display Name</string>
    <string name="clear">Clear</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="cvv">CVV</string>
    <string name="expire_date">Expire Date</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="orders">Orders</string>
    <string name="points">Points</string>
    <string name="redeem">Redeem</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="egp">"EGP %s"</string>

    <string name="price_with_discount">Price: %1$.2f, Discount: %2$.2f%%</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="connection_problems">Connection Problems</string>
    <string name="checkout">Checkout</string>

</resources>